cluster-talos/kubernetes/apps/neutarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: neutarr
  labels:
    k10.kasten.io/backup: "true"
    k10.kasten.io/storage-class: vsphere
